unpackaged/main/default/objects/Mesure_Saturation_en_oxyg_ne__c/Mesure_Saturation_en_oxyg_ne__c.object-meta.xml
<CustomObject>
    <label>Mesure Saturation en oxygène</label>
    <nameField>
        <displayFormat>MSO-{00000000}</displayFormat>
        <label>Nom de Saturation en oxygène</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mesures Saturation en oxygène</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>