unpackaged/main/default/objects/Mesure_Saturation_en_oxyg_ne__c/fields/Date_de_la_mesure__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_mesure__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date de la mesure</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>