unpackaged/main/default/objects/Mesure_Saturation_en_oxyg_ne__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipName>Saturation_en_oxyg_ne</relationshipName>
    <type>Lookup</type>
</CustomField>