unpackaged/main/default/objects/Mesure_Saturation_en_oxyg_ne__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipName>Saturation_en_oxyg_ne</relationshipName>
    <type>Lookup</type>
</CustomField>