unpackaged/main/default/objects/Mesure_Saturation_en_oxyg_ne__c/fields/Saturation_en_oxyg_ne__c.field-meta.xml
<CustomField>
    <fullName>Saturation_en_oxyg_ne__c</fullName>
    <label>Saturation en oxygène</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>