unpackaged/main/default/objects/Mesure_Saturation_en_oxyg_ne__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Saturation_en_oxyg_ne</relationshipName>
    <type>Lookup</type>
</CustomField>